// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideLinkItem should render "next" 1`] = `
<ul
  className="pagination binary-pagination"
>
  <li
    className="page-item"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link binary-pagination-link",
  "to": "path/to/next",
  "rel": "next"
}
      <span
        className="SideLinkItem__LinkText-sc-1sb2mn5-0 itQixI"
      >
        Next title
      </span>
      <span
        className="SideLinkItem__LinkArrow-sc-1sb2mn5-1 bARCRt"
      >
        →
      </span>
    </div>
  </li>
</ul>
`;

exports[`SideLinkItem should render "prev" 1`] = `
<ul
  className="pagination binary-pagination"
>
  <li
    className="page-item"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link binary-pagination-link",
  "to": "path/to/prev",
  "rel": "prev"
}
      <span
        className="SideLinkItem__LinkArrow-sc-1sb2mn5-1 bARCRt"
      >
        ←
      </span>
      <span
        className="SideLinkItem__LinkText-sc-1sb2mn5-0 itQixI"
      >
        Prev title
      </span>
    </div>
  </li>
</ul>
`;
